# dynode-web

./: .gitignore  Cargo.toml  README.md  Repo-Code-Description.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yaml  deploy.yaml  test.yaml
docs/: index.md
src/: App.css  App.tsx  ModelState.tsx  index.css  main.tsx  utils.ts
src/forms/: FormGroup.tsx  MatrixInput.tsx  NumberInput.css  NumberInput.tsx  SelectInput.tsx
src/layout/: Caret.css  Caret.tsx  DragBar.css  DragBar.tsx  MiniExpandable.css  MiniExpandable.tsx  Tabs.css  Tabs.tsx  Turbo.css  Turbo.tsx  spacing.css
src/mitigations/: Antivirals.tsx  Community.tsx  Mitigations.css  Mitigations.tsx  Vaccine.tsx
src/plots/: MitigationPlot.tsx  OutputPlot.tsx  PlotGroup.tsx  PointPlot.tsx  PointTooltip.tsx  SEIRPlot.css  SEIRPlot.tsx  Tooltip.ts  plotUtils.ts  useResize.tsx
src/state/: modelRuns.ts
src/types/: wasm_dynode.d.ts
src/views/: Detection.tsx  EpiCurve.css  EpiCurve.tsx  GroupEditor.css  GroupEditor.tsx  MobileEditor.tsx  ParamsEditor.tsx  PresetEditor.css  PresetEditor.tsx  SummaryTable.css  SummaryTable.tsx
wasm_dynode/: Cargo.toml
wasm_dynode/src/: lib.rs  mitigations.rs  model.rs  model_unified.rs  parameters.rs
